--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@ document.getElementById("dem").innerHTML = "FAREWELL,2024!!";
 document.getElementById("dem").innerHTML="FAREWELL,2024!!";
 </script>
 <p id="course" style="color:darkorange;text-align: center;font-family:sans-serif;text-decoration-style: dotted;">NOTHING CHANGED?</p>
-<script src="script.js"></script>
+<script>
+function myfunc(){
+document.getElementById("course").innerHTML="OH! WELCOME to 2025"
+ 
+}
+</script>
 <button type="button" onclick="myfunc()" style = "width: 20%;height:50px;color :black;font-family:fantasy;text-align:center;background-color:cornflowerblue;">Tap Once More??</button>
 <div id="giftContainer">
 <img id="giftBox" src="letterclose.jpg" onclick="gift()">
