--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@ document.getElementById("dem").innerHTML = "FAREWELL,2024!!";
         transform: translate(-20px,-20px);
     }
 }
+body {
+    margin: 0;
+    padding: 0;
+    width: 375px; 
+    height: 667px; 
+    overflow: hidden; 
+    position: relative;
+    margin: 0 auto; 
+}
+
+.container {
+    width: 375px;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+img, .background {
+    width: 100%;
+    height: auto;
+}
 </style>
 <div id="tt">
 <h1 style="color:mediumaquamarine; font-family: cursive; text-align: center;text-decoration:underline;">THE YEAR</h1>
