--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ document.getElementById("dem").innerHTML = "FAREWELL,2024!!";
 </script>
 <style>
 #tt{
-    background-image:url("pop.png"),url("pep.png");
-    background-position:center ,center;
-    background-repeat: repeat,repeat;
+    background-image:url("pep.png");
+    background-position:center;
+    background-repeat:repeat;
     background-size:cover; 
 }
 </style>
