--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ document.getElementById("dem").innerHTML = "FAREWELL,2024!!";
 </script>
 <style>
 #tt{
-    background-image:url("pep.png"),url("pep.png");
+    background-image:url("pop.png"),url("pep.png");
     background-position:center,center;
     background-repeat:repeat,repeat;
     background-size:cover; 
