--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<meta name="viewport" content="width=375,user-scalable=no">
 <script>
 function its(){
 document.getElementById("dem").innerHTML = "FAREWELL,2024!!";
